Updating activities for Yelle Lieder

--- a/src/content/champions/yelle-lieder.yaml
+++ b/src/content/champions/yelle-lieder.yaml
@@ -1,6 +1,6 @@
 firstName: Yelle
 lastName: Lieder
-role: Consultant Digitalization & Sustainability
+role:  Green IT Lead
 organization: adesso SE
 languages: 
   - English
@@ -9,7 +9,7 @@ pronoun: He/Him
 country: Germany
 city: Düsseldorf
 bio: |
- Yelle Lieder is a computer scientist and works as a consultant for technology and sustainability at adesso SE. He supports customers in achieving their sustainability goals in the areas of sustainability data, sustainable processes and systems as well as sustainability innovations.
+ Yelle Lieder is Green IT Lead at adesso. As part of the CIO Advisory Competence Center, he focuses on strategies to measure and reduce the environmental impact of IT systems and on the use of technology to achieve sustainability goals.
 type: normal
 social:
   github: yellelieder
