Update ines-akrap github

--- a/src/content/champions/ines-akrap.yaml
+++ b/src/content/champions/ines-akrap.yaml
@@ -12,7 +12,7 @@ city: Munich
 bio: Ines Akrap is a Frontend Software Engineer passionate about optimizing websites to be fast, sustainable, and provide the best user experience for every user. She works in Storyblok as Solutions Engineer. She enjoys sharing her knowledge with others through talks, podcasts, workshops, and courses. Her current biggest project is teaching one little human risk management and words.
 type: normal
 social:
-  github: InesAkrap
+  github: ines-akrap
   linkedin: ines-akrap
   twitter: InesAkrap
   website: https://inesakrap.com
